--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,6 +11,8 @@
   height: 50px;
   margin: 36px 0 0 0;
   padding: 0;
+
+  box-sizing: border-box;
 }
 .profile__add-button:hover {
   opacity: 0.7;
