--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-  background-image: url(../../../images/Edit\ Button.svg);
+  background-image: url(../../../images/edit-button.svg);
   background-position: center;
   background-repeat: no-repeat;
   box-sizing: border-box;
