--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,9 +1,9 @@
 .profile__subtitle {
   font-weight: normal;
   font-size: 14px;
-  line-height: 17px;
+  /* line-height: 17px; */
   text-align: center;
-  margin: 14px 0 0 0;
+  margin: 6px 0 0 0;
 }
 @media screen and (min-width: 1280px) {
   .profile__subtitle {
