--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,7 +1,7 @@
 .profile__title {
   font-weight: 500;
   font-size: 27px;
-  line-height: 33px;
+  /* line-height: 33px; */
   text-align: center;
   margin: 0 10px 0 0;
   width: 189px;
