--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -20,5 +20,8 @@
     margin: 48px 0 0 0;
     width: 358px;
     height: 50px;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
