--- a/pages/index.css
+++ b/pages/index.css
@@ -16,7 +16,8 @@
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__container/elements__container.css);
+/* @import url(../blocks/elements/__container/elements__container.css); */
+@import url(../blocks/element/element.css);
 @import url(../blocks/element/__button-like/element__button-like.css);
 @import url(../blocks/element/__button-like/_active/element__button-like_active.css);
 
