--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,9 +1,9 @@
 .element {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 282px);
-  gap: 20px 17px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+
+  background-color: #ffffff;
+  color: #000;
+  border-radius: 10px;
+  overflow: hidden;
 }
