--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,8 +12,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .profile__add-button:hover {
-  opacity: 0.7;
+  opacity: 0.6;
   cursor: pointer;
 }
 
@@ -21,5 +22,6 @@
   .profile__add-button {
     width: 150px;
     margin: 0 0 0 auto;
+    background-size: 22px;
   }
 }
