--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,11 +8,10 @@
   background-color: transparent;
   border-color: #fff;
   border: 0;
-  /* border-width: 1px; */
   padding: 0;
 }
 .profile__edit-button:hover {
-  opacity: 0.7;
+  opacity: 0.6;
   cursor: pointer;
 }
 
@@ -20,5 +19,6 @@
   .profile__edit-button {
     width: 24px;
     height: 24px;
+    background-size: 24px;
   }
 }
