--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,9 +5,10 @@
   flex-direction: column;
   align-items: center;
 }
+
 @media screen and (min-width: 1280px) {
   .profile__info {
     margin: 0 0 0 30px;
-    flex-direction: column;
+    align-items: flex-start;
   }
 }
