--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,11 +1,14 @@
 .profile__title {
   font-weight: 500;
   font-size: 27px;
-  /* line-height: 33px; */
-  text-align: center;
+  line-height: 33px;
   margin: 0 10px 0 0;
   width: 189px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
+
 @media screen and (min-width: 1280px) {
   .profile__title {
     width: 294px;
@@ -13,6 +16,5 @@
     font-size: 42px;
     line-height: 48px;
     margin: 0 18px 0 0;
-    text-align: start;
   }
 }
