--- a/pages/index.css
+++ b/pages/index.css
@@ -20,10 +20,10 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__button-like/element__button-like.css);
 @import url(../blocks/element/__button-like/_active/element__button-like_active.css);
+@import url(../blocks/element/__trash/element__trash.css);
 
 @import url(../blocks/element/__caption-text/element__caption-text.css);
 @import url(../blocks/element/__caption/element__caption.css);
-/* @import url(../blocks/element/__items/element__items.css); */
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -37,3 +37,7 @@
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__image-box/popup__image-box.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-text/popup__image-text.css);
+@import url(../blocks/popup/_name/popup_name_resize.css);
