--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,4 +5,9 @@
   line-height: 17px;
   box-sizing: border-box;
   width: 100%;
+  padding-bottom: 10px;
+}
+
+.popup__input:focus {
+  outline: none;
 }
