--- a/blocks/popup/__label-input/popup__label-input.css
+++ b/blocks/popup/__label-input/popup__label-input.css
@@ -1,8 +1,8 @@
 .popup__label-input {
-  margin: 30px 0 0 0;
+  /* margin: 1px 0 0 0; */
   width: 100%;
 }
 
-.popup__label-input:first-child {
+/* .popup__label-input:first-child {
   margin: 0;
-}
+} */
