--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,5 +1,5 @@
 .popup__submit {
-  margin: 45px 0 25px 0;
+  margin: 21px 0 0 0;
   width: 238px;
   height: 36px;
   background-color: #000;
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 1280px) {
   .popup__submit {
-    margin: 48px 0 37px 0;
+    margin: 12px 0 35px 0;
     width: 358px;
     height: 50px;
     font-weight: normal;
