--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,6 +13,7 @@
 .profile__edit-button:hover {
   opacity: 0.6;
   cursor: pointer;
+  outline: none;
 }
 
 @media screen and (min-width: 1280px) {
